--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</script><script type="text/javascript">
 				var privacypolicy = "https://corp.sertifi.com/privacy-policy/"
 				var consenttype = "info"</script><link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css"></link><script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script><script type="text/javascript">
-						var consenttype = "info"</script><script type="text/javascript" src="js/cookie-consent.js"></script></head><body><div class="portal-content theme2" dir="ltr"><header class="portal-header" data-portal-language="en"><nav xmlns="" class="portal-header-navbar navbar navbar-fixed-top"><div class="container-fluid"><div class="navbar-container">
+						var consenttype = "info"</script><script type="text/javascript" src="js/cookie-consent.js"></script><script src="js/layout-custom-script.js" type="text/javascript"></script></head><body><div class="portal-content theme2" dir="ltr"><header class="portal-header" data-portal-language="en"><nav xmlns="" class="portal-header-navbar navbar navbar-fixed-top"><div class="container-fluid"><div class="navbar-container">
 <div class="navbar-header">
 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand"><img class="logo" src="css/image/portal-logo.png" alt="Logo"></a>
 </div>
